# DistCA

./: .clang-format  .gitignore  .modalignore  .pre-commit-config.yaml  Dockerfile  README.Docker.md  README.Installation.md  README.md  env.sh  env.template.sh  pretrain_llama.py  pretrain_llama.sh  pyproject.toml  requirements.txt  setup.py  test_a2a_timing.py  test_attn_worker.py
.github/workflows/: ci-modal-smoke.yml  lint.yml
artifact_evaluation/: 01-run_modal_smoke.py  02-run_modal_llama_8b_20iter.py  03-run_modal_multi_gpu_tp2.py  04-run_modal_multi_node_tp8_dp2.py  README.md
baseline/wlbllm_optimal/: README.md  context_parallel.py  pretrain_gpt.py  run.sh
baseline/wlbllm_original/: cp_performance_compare.py  per_doc_correctness_test.py  per_doc_cp_attn.py  per_seq_correctness_test.py  per_seq_cp_attn.py  setup.py
benchmarks/_250520_attn_vs_mlp/: analyze_am_ratio.py  models.py  opt_ours.py  opt_ours_2.py  opt_ours_gpt.py  opt_ours_gpt2.py  opt_wlb.py
benchmarks/_250530_attn_mlp_pipeline/: README.md  sanitize_timemodule.ipynb
benchmarks/_250614_attndist/: attn-dist_multimodal.psv  attn-time-dist.plot.py
benchmarks/_250614_wlbvsattnserver/: mlp_verify.ipy.py  runsim_bruteforce_wlb_vs_attnserver.py  runsim_wlb_vs_attnserver.ipy.py
benchmarks/_250618_wlbattn_diff/: runsim_func.batch.ipy  runsim_func.interactive.ipy  runsim_func.py  wlb_vs_attnserver_diff.psv
benchmarks/_250626_benchmarks/: main.py  runsim_func.py
benchmarks/_250630_new_simulator2/: Untitled.ipynb  optimizer_attnserver_lessvar.ipy.py  samples.py  wandb_optimizer.py  wandb_optimizer_attnserver_lessvar.py  wandb_optimizer_wlbllm.py  zrun_wandb_optimizer_wlbupsample.py  zslurm.batch.sh  zslurm.sh
benchmarks/_250702_simulation/: attnserver.py  run.py  test_timemodule.py  timemodule.py  wlbllm.py
benchmarks/_250708_docdist/: docdist.py  samples.py
benchmarks/_250714_split_attn/: algorithm.py
benchmarks/_250729_benchmark_2cp/: algorithm_v1_more_debuggable.py
benchmarks/_250809_e2e_benchmark/: test_e2e_anchor.sh  test_e2e_combined.v2.sh  test_e2e_combined.v3.sh
benchmarks/_250811_attention_again/: out.details.txt  out.txt  test_flash_attn_varlen.py
benchmarks/_250813_simulator_simple/: balance.ipy.py  sim_pp_d2.py
benchmarks/_250813_stream/: fa_run.json  main.sh  megatron.diff
benchmarks/_250828_overflow_inspection/: overflow.py
benchmarks/_250830_large_scale_v3/: analyze.repeat.py  analyze_v1.py  sbatch_run.v3.d2-comp1.sh
benchmarks/_250901_oom_inspection/: visualize_mem.v2.group.py
benchmarks/_250902_large_scale_v4/: analyze_v1v4_comb.py  debug_gpu_error.sh  debug_gpu_error.v2.sh  sbatch_run.v4.w2.sh
benchmarks/_250903_large_scale_v4/: check_mem.py  srun_multi_combined.mem.sh
benchmarks/_250903_successful_nodes/: one_run.pp.sh
benchmarks/_250904_large_scale_v5/: overflow_check_results.csv
benchmarks/_250905_cuda_event/: analyze.nsys.py  cuda_multiseg_torch_nvtx.py  srun-me.sh
benchmarks/_250905_debug_network_corebind/: test_e2e_combined.slurm.v5.sh
benchmarks/_250905_large_scale_llama70b/: salloc_srun.core-bind.sh  salloc_srun.sh
benchmarks/_250907_large_scale_v6/: analyze_attn.py  analyze_straggler.py  query_success_runs.py  salloc_srun.compare.sh  salloc_srun.large_scale.sh  salloc_srun.sh  salloc_srun.sweep.sh  wandb_speedup.py  (+1 more)
ci/: README.md  modal_smoke_test.py
csrc/: CMakeLists.txt
csrc/bindings/: all_to_all.cpp  bindings.cpp  nvshmem.cpp  nvshmem.h  registration.h
csrc/cmake/: FindNVSHMEM.cmake
csrc/core/: common_utils.h  cuda_utils.h  fastalltoall.cu  fastalltoall.h  in_place_attn_switch.cu  in_place_attn_switch.h  memcpy.cu  memcpy.h  nvshmem_utils.h
d2/: mem.py  runsim_wlb_vs_attnserver.ipy.py
distca/: mem.py  ray_launch.py
docs/: DEVELOPMENT.md
modal_scripts/: BABY_STEPS_PLAN.md  GETTING_STARTED.md  H100_UPDATE.md  MEGATRON_TRAINING_GUIDE.md  MODAL_SETUP_SUMMARY.md  README.md  STATUS.md  build_log.txt  build_log_v2.txt  build_log_v3.txt  build_log_v4.txt  megatron_core_test.py  megatron_full_stack.py  megatron_minimal.py  megatron_simple.py  megatron_stable.py  test_gpu.py
playground/: .gitignore  BEFORE_AFTER_COMPARISON.md  PRETRAIN_REFACTOR_README.md  REFACTORING_SUMMARY.md  app_flops.py  estimate_memory.py  pretrain_gpt.py  pretrain_gpt.sh  pretrain_llama.py  pretrain_llama.sh  pretrain_llama_refactored.py  run_pretrain_llama_refactored.sh  simple_4d.py  simple_4d.sh  test_create_microbatch.py  test_dataloader.py  test_dataloader.sh  test_distca.py  test_distca.sh  test_distca_v1.py  test_megatron_init.py  test_megatron_init.sh  test_vocab.py  webapp.0.py  webapp.py
scripts/: docker_install_and_build.sh  run_docker_benchmark.sh  run_docker_single_gpu_benchmark.sh  run_docker_single_gpu_smoke.sh  single_gpu_benchmark.sh  single_gpu_smoke.sh
setup/: envvars-login.sh  setup_d2.sh  setup_env.sh  setup_nvcr_base.sh  setup_sqsh.sh
simulator/: data_validate.ipynb  simulator.py  simulator_new_playground.py
src/: attn_worker.py  inplace_metadata.py  test_ops.py  test_ops_v1.py
tests/: .gitignore  global_batch_provider.py  megatron_test_utils.py  shabi  test_basic_megatron_e2e.py  test_basic_megatron_e2e.sh  test_comm_metadata.py  test_comm_metadata_balanced_flops.py  test_create_pp_microbatch_simple.py  test_d2_e2e.py  test_dispatch_fast.py  test_dispatch_fast_balanced_flops.py  test_dispatch_qkv.py  test_dispatch_qkv_difflen.py  test_e2e_4d.py  test_e2e_anchor.nsys.n1.sh  test_e2e_anchor.nsys.sh  test_e2e_anchor.py  test_e2e_base.py  test_e2e_combined.debug.sh  test_e2e_combined.multi.sh  test_e2e_combined.nsys-analysis.sh  test_e2e_combined.py  test_e2e_combined.salloc-exp.sh  test_e2e_combined.salloc.mem.sh  test_e2e_combined.salloc.sh  test_e2e_combined.sh  test_e2e_combined.slurm.sh  test_e2e_combined_formatted.py  test_e2e_d2.py  test_fa2a_metadata.py  test_fa2a_metadata_2cp.py  test_fa2a_metadata_balanced_flops.py  test_fa2a_ops.py  test_items.py  test_lazy_loader_demo.py  test_megatron_e2e.py  test_megatron_e2e.sh  test_megatron_e2e_2cp.py  test_megatron_e2e_balanced_flops.py  (+33 more)
utils/: bind_and_exec.sh  redirect_log.sh
(+650 files in other folders)
